// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StartTime /> #render() still matches snapshot 1`] = `
<ForEachEventVariant
  renderDefault={[Function]}
  renderLabel={[Function]}
  variant={null}
/>
`;

exports[`<StartTime /> #renderDefault() still matches snapshot 1`] = `
<Memo(Connect(WithSimplifyResaga(Time)))
  editablePlaceholder={
    <FormattedMessage
      defaultMessage="Click to specify departure time"
      id="app.Event.parts.Flight.StartTime.editablePlaceholder"
    />
  }
  intl={
    Object {
      "formatMessage": [Function],
    }
  }
  variant={null}
/>
`;

exports[`<StartTime /> #renderLabel() still matches snapshot 1`] = `
<Memo(Connect(WithSimplifyResaga(Time)))
  intl={
    Object {
      "formatMessage": [Function],
    }
  }
  renderPrefix={[Function]}
  variant={null}
/>
`;

exports[`<StartTime /> #renderLabelPrefix() still matches snapshot 1`] = `
<FormattedMessage
  defaultMessage="Departing:"
  id="app.Event.parts.Flight.StartTime.labelPrefix"
/>
`;
